<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" ><RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.abhishek.feedback.MainActivity">

    <TextView
        android:text="@string/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"/>

    <TextView
        android:text="@string/Please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        android:layout_below="@+id/text1"/>
    <TextView
        android:text="@string/survey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text3"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>
    <TextView
        android:text="@string/FoodQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text4"
        android:layout_below="@+id/text3"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar1"
        android:stepSize="1.0"
        android:rating="2"
        android:layout_below="@+id/text4"
       android:layout_centerHorizontal="true" />
    <TextView
        android:text="@string/Service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text5"
        android:layout_below="@+id/ratingBar1"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar2"
        android:stepSize="1.0"
        android:rating="2"
        android:layout_below="@+id/text5"
        android:layout_centerHorizontal="true" />
    <TextView
        android:text="@string/Atmosphere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text6"
        android:layout_below="@+id/ratingBar2"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar3"
        android:stepSize="1.0"
        android:rating="2"
        android:layout_below="@+id/text6"
        android:layout_centerHorizontal="true" />
    <TextView
        android:text="@string/Cleanliness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text7"
        android:layout_below="@+id/ratingBar3"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar4"
        android:stepSize="1.0"
        android:rating="2"
        android:layout_below="@+id/text7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Overallexp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text8"
        android:layout_below="@+id/ratingBar4"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar5"
        android:stepSize="1.0"
        android:rating="2"
        android:layout_below="@+id/text8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Menuvariety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text9"
        android:layout_below="@+id/ratingBar5"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:stepSize="1.0"
        android:rating="2"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar6"
        android:layout_below="@+id/text9"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Page"
        android:id="@+id/button1"
        android:layout_below="@+id/ratingBar6"
        android:layout_alignParentRight="true"/>


</RelativeLayout>
</ScrollView>