<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/VisitFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text10"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText1"
        android:layout_toRightOf="@+id/text10"
        android:layout_marginRight="5dp"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X per month"
        android:id="@+id/text11"
        android:layout_toRightOf="@id/editText1"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Othercomments"
        android:id="@+id/text12"
        android:layout_below="@+id/text11"
        android:layout_marginLeft="10dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/text12"
         />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text13"
        android:text="@string/Guestinfo"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text14"
        android:text="@string/Name"
        android:layout_below="@+id/text13"
        android:layout_margin="10dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text14"
        android:layout_below="@+id/text13"

        android:id="@+id/editText3"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text15"
        android:text="@string/Birthday"
        android:layout_below="@+id/text14"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"

        />

   <EditText
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/editText4"
       android:inputType="date"
       android:hint="DDMMYYYY"
       android:layout_toRightOf="@+id/text15"
       android:layout_marginTop="15dp"
       android:layout_below="@+id/text14"
       android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text16"
        android:text="@string/Anniversary"
        android:layout_below="@+id/text15"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:inputType="date"
        android:hint="DDMMYYYY"
        android:layout_toRightOf="@+id/text16"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/text15"
        android:layout_marginLeft="10dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text17"
        android:text="@string/Mobile"
        android:layout_below="@+id/text16"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text17"
        android:layout_below="@+id/text16"
        android:id="@+id/editText6"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text18"
        android:text="@string/Email"
        android:layout_below="@+id/editText6"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text18"
        android:id="@+id/editText7"
        android:layout_margin="10dp"
        android:layout_below="@+id/editText6"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text19"
        android:text="@string/surpriseplannername"
        android:layout_below="@+id/editText7"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text18"
        android:id="@+id/editText8"
        android:layout_margin="10dp"
        android:layout_below="@+id/editText7"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text20"
        android:text="@string/surpriseplannernumber"
        android:layout_below="@+id/editText8"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text20"
        android:inputType="number"
        android:id="@+id/editText9"
        android:layout_margin="10dp"
        android:layout_below="@+id/editText8"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text21"
        android:text="@string/Fbpage"
        android:layout_below="@+id/editText9"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text22"
        android:text="@string/Fblink"
        android:layout_below="@+id/text21"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:text="SUBMIT"
        android:layout_below="@+id/text22"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
    </ScrollView>